k8s/cert-manager.yaml
# PREREQ: create namespace first
---
apiVersion: v1
kind: Namespace
metadata:
  name: tessrax
